# grocery-tracker

./: .gitignore  AGENTS.md  CHANGELOG.md  HANDOFF-TO-CLAUDE-CODE.md  PRD-REVIEW.md  README.md  READY-FOR-CLAUDE-CODE.md  SKILL.md  config.toml.example  grocery-tracker-prd-v3.md  pyproject.toml
.claude/: e2e-test-report.md
.claude/handoffs/: 2026-01-29-153541-config-investigation.md  2026-01-29-164049-grocery-tracker-e2e-test.md  2026-01-29-sqlite-migration-complete.md  2026-01-30-115904-e2e-test-completion.md
.codex/environments/: environment.toml
.github/workflows/: ci.yml
references/: cli-commands.md
references/agent-handoffs/: 2026-02-10-sprint2-complete.md  2026-02-10-sprint3-route-planner.md  2026-02-10-sprint4-savings-tracker.md  2026-02-12-post-merge-nitpick-followups.md  2026-02-12-sprint5-seasonal-intelligence.md  2026-02-12-sprint6-bulk-buying-recipe-hooks.md
src/grocery_tracker/: __init__.py  analytics.py  config.py  data_store.py  inventory_manager.py  item_normalizer.py  list_manager.py  main.py  migrate_to_sqlite.py  models.py  output_formatter.py  receipt_processor.py  sqlite_store.py  tui.py
tests/: __init__.py  conftest.py  test_analytics.py  test_cli.py  test_cli_phase2.py  test_cli_phase3.py  test_config.py  test_data_store.py  test_integration.py  test_inventory_manager.py  test_list_manager.py  test_migration.py  test_models.py  test_output_formatter.py  test_output_formatter_phase2.py  test_output_formatter_phase3.py  test_phase3_analytics.py  test_receipt_processor.py  test_sqlite_store.py
